update multiple cpp file build

--- a/helloworld/.vscode/tasks.json
+++ b/helloworld/.vscode/tasks.json
@@ -24,7 +24,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${fileDirname}\\*.cpp",
                 "-o",
                 "${fileDirname}\\bin\\${fileBasenameNoExtension}.exe"
             ],
