--- a/thread/.vscode/launch.json
+++ b/thread/.vscode/launch.json
@@ -7,11 +7,11 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "d:/cpp-practice/namespace",
-      "program": "d:/cpp-practice/namespace/build/Debug/outDebug",
+      "externalConsole": false,
+      "cwd": "${workspaceFolder}",
+      "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
+      "miDebuggerPath": "C:\\msys64\\mingw64\\gdb.exe",
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
